Non-required validation errors on the main registration form are now logged. Added support for secerity levels in reg_log table.  Added shading of more severe log entries.  Borrowed icon code from the watchdog system.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@56 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/reg.css
+++ b/reg.css
@@ -39,3 +39,12 @@ td .reg-value {
   font-weight: bold;
 }
 
+.reg-warning td {
+	background-color: #ffffcc;
+}
+
+.reg-error td {
+	background-color: #ffcccc;
+}
+
+
