Fixed utility forms.  Got themes working under Drupal 6.  Fixed CSS on some form elements.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@263 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/reg.css
+++ b/reg.css
@@ -55,3 +55,9 @@ td .reg-value {
 	display: none;
 }
 
+/**
+* We do this because select elements also have a margin for some reason.
+*/
+.form-text, .form-checkbox {
+	margin-left: 1em;
+}
