--- a/reg.css
+++ b/reg.css
@@ -4,6 +4,7 @@
 */
 .reg-form-item {
 	margin-bottom: 1em;
+	margin-left: 5px;
 }
 
 tr.odd .reg-form-item, tr.even .reg-form-item {
@@ -58,6 +59,16 @@ td .reg-value {
 /**
 * We do this because select elements also have a margin for some reason.
 */
-.form-text, .form-checkbox {
-	margin-left: 1em;
+.form-select {
+	margin-left: 0;
 }
+
+/**
+* Put some badly needed padding around our membership level descriptions.
+*/
+.reg-level-desc {
+	padding: 5px;
+}
+
+
+
